--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "lib": "lib"
   },
   "dependencies": {
-    "jest": "^26.2.2"
+    "axios": "^0.19.2",
+    "inquirer": "^7.3.3",
+    "jest": "^26.2.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
